--- a/twitter_scraping.ipynb
+++ b/twitter_scraping.ipynb
@@ -101,7 +101,7 @@
    "id": "ae6f634d",
    "metadata": {},
    "source": [
-    "# Language detection"
+    "# Language detection tests"
    ]
   },
   {
